--- a/examples/cc/BUILD
+++ b/examples/cc/BUILD
@@ -2,7 +2,7 @@
 # reference only. Note that repo maintainers can freely change any part of the
 # repository code at any time.
 load("@contrib_rules_oci//oci:defs.bzl", "structure_test")
-load("//common:variables.bzl", "variables")
+load("//base:distro.bzl", "DISTROS")
 load("//private/oci:defs.bzl", "cc_image")
 
 package(default_visibility = ["//visibility:public"])
@@ -11,13 +11,13 @@ package(default_visibility = ["//visibility:public"])
     name = "hello_" + distro,
     srcs = ["hello.c"],
     base = "//cc:cc_root_amd64_" + distro,
-) for distro in variables.DISTS]
+) for distro in DISTROS]
 
 [cc_image(
     name = "hello_cc_" + distro,
     srcs = ["hello_cc.cc"],
     base = "//cc:cc_root_amd64_" + distro,
-) for distro in variables.DISTS]
+) for distro in DISTROS]
 
 [structure_test(
     name = "hello_" + distro + "_test",
@@ -28,7 +28,7 @@ package(default_visibility = ["//visibility:public"])
         "amd64",
         "manual",
     ],
-) for distro in variables.DISTS]
+) for distro in DISTROS]
 
 [structure_test(
     name = "hello_cc_" + distro + "_test",
@@ -39,4 +39,4 @@ package(default_visibility = ["//visibility:public"])
         "amd64",
         "manual",
     ],
-) for distro in variables.DISTS]
+) for distro in DISTROS]
