chore: upgrade rules_oci

--- a/examples/cc/BUILD
+++ b/examples/cc/BUILD
@@ -1,8 +1,8 @@
 # Public notice: this file is for internal documentation, testing, and
 # reference only. Note that repo maintainers can freely change any part of the
 # repository code at any time.
+load("@container_structure_test//:defs.bzl", "container_structure_test")
 load("//base:distro.bzl", "DISTROS")
-load("@contrib_rules_oci//oci:defs.bzl", "structure_test")
 load("//private/oci:defs.bzl", "cc_image")
 
 package(default_visibility = ["//visibility:public"])
@@ -19,10 +19,10 @@ package(default_visibility = ["//visibility:public"])
     base = "//cc:cc_root_amd64_" + distro,
 ) for distro in DISTROS]
 
-[structure_test(
+[container_structure_test(
     name = "hello_" + distro + "_test",
     size = "small",
-    config = ["testdata/hello_" + distro + ".yaml"],
+    configs = ["testdata/hello_" + distro + ".yaml"],
     image = ":hello_" + distro,
     tags = [
         "amd64",
@@ -30,10 +30,10 @@ package(default_visibility = ["//visibility:public"])
     ],
 ) for distro in DISTROS]
 
-[structure_test(
+[container_structure_test(
     name = "hello_cc_" + distro + "_test",
     size = "small",
-    config = ["testdata/hello_cc_" + distro + ".yaml"],
+    configs = ["testdata/hello_cc_" + distro + ".yaml"],
     image = ":hello_cc_" + distro,
     tags = [
         "amd64",
