--- a/experimental/python3/BUILD
+++ b/experimental/python3/BUILD
@@ -3,6 +3,7 @@ load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_tarball")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
 load("//base:distro.bzl", DISTROS = "LANGUAGE_DISTROS")
+load("//common:variables.bzl", "NONROOT")
 load("//private/util:deb.bzl", "deb")
 
 package(default_visibility = ["//visibility:public"])
