--- a/examples/nonroot/BUILD
+++ b/examples/nonroot/BUILD
@@ -2,46 +2,39 @@
 # reference only. Note that repo maintainers can freely change any part of the
 # repository code at any time.
 load("@container_structure_test//:defs.bzl", "container_structure_test")
+load("@io_bazel_rules_docker//contrib:passwd.bzl", "passwd_entry", "passwd_file")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary")
-load("@rules_distroless//distroless:defs.bzl", "home", "passwd")
 load("@rules_oci//oci:defs.bzl", "oci_image")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 load("//base:distro.bzl", "DISTROS")
 
-# Create a passwd file and home directory with a nonroot user and uid.
-passwd(
+# Create a passwd file with a nonroot user and uid.
+passwd_entry(
+    name = "nonroot_user",
+    info = "nonroot",
+    uid = 1002,
+    username = "nonroot",
+)
+
+passwd_file(
     name = "passwd",
-    passwds = [
-        {
-            "gecos": ["nonroot"],
-            "gid": 1000,
-            "home": "/home",
-            "shell": "/bin/bash",
-            "uid": 1002,
-            "username": "nonroot",
-        },
+    entries = [
+        ":nonroot_user",
     ],
 )
 
-home(
-    name = "home",
-    dirs = [
-        {
-            "home": "/home",
-            "uid": 1002,
-            "gid": 1000,
-        },
-    ],
+pkg_tar(
+    name = "passwd_tar",
+    srcs = [":passwd"],
+    mode = "0644",
+    package_dir = "etc",
 )
 
 # Include it in our image as a tar.
 oci_image(
     name = "passwd_image",
     base = "//base:base_root_amd64_debian11",
-    tars = [
-        ":passwd",
-        ":home",
-    ],
+    tars = [":passwd_tar"],
     user = "nonroot",
     visibility = ["//visibility:private"],
 )
