--- a/java/BUILD
+++ b/java/BUILD
@@ -3,11 +3,11 @@ load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 load("//:debian_versions.bzl", DEBIAN_VERSIONS = "DEBIAN_PACKAGE_VERSIONS")
 load("//:java_archives.bzl", "JAVA_RELEASE_VERSIONS")
-load("//base:base.bzl", "deb_pkg")
 load("//base:distro.bzl", "DISTROS")
-load("//cacerts:java.bzl", "cacerts_java")
 load("//java:jre_ver.bzl", "jre_ver")
 load("//private/oci:defs.bzl", "java_image")
+load("//private/util:deb.bzl", "deb")
+load("//private/util:java_cacerts.bzl", "java_cacerts")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -37,9 +37,9 @@ JAVA_VERSIONS_PER_DISTRO = [
 ]
 
 [
-    cacerts_java(
+    java_cacerts(
         name = "cacerts_java_" + arch + "_" + distro,
-        cacerts_tar = "//base:cacerts_" + arch + "_" + distro,
+        archive = "//common:cacerts_" + distro + "_" + arch,
     )
     for distro in DISTROS
     for arch in JAVA_ARCHITECTURES
@@ -52,7 +52,7 @@ JAVA_VERSIONS_PER_DISTRO = [
             "/usr/bin/java": "/usr/lib/jvm/java-" + java_version + "-openjdk-" + arch + "/bin/java",
         },
         deps = [
-            deb_pkg(
+            deb.package(
                 arch,
                 distro,
                 "openjdk-" + java_version + "-jre-headless",
@@ -119,21 +119,21 @@ JAVA_VERSIONS_PER_DISTRO = [
         base = ("//base:base_nossl" if (not ("debug" in mode)) else "//base:base_nossl_debug") + "_" + user + "_" + arch + "_" + distro,
         env = {"LANG": "C.UTF-8"},
         tars = [
-            deb_pkg(arch, distro, "zlib1g"),
-            deb_pkg(arch, distro, "libjpeg62-turbo"),
-            deb_pkg(arch, distro, "libpng16-16"),
-            deb_pkg(arch, distro, "liblcms2-2"),
-            deb_pkg(arch, distro, "libfreetype6"),
-            deb_pkg(arch, distro, "fonts-dejavu-core"),
-            deb_pkg(arch, distro, "fontconfig-config"),
-            deb_pkg(arch, distro, "libexpat1"),
-            deb_pkg(arch, distro, "libfontconfig1"),
-            deb_pkg(arch, distro, "libuuid1"),
-            deb_pkg(arch, distro, "libbrotli1"),
-            deb_pkg(arch, distro, "libcrypt1"),
-            deb_pkg(arch, distro, "libstdcpp6"),
-            deb_pkg(arch, distro, "libgcc-s1"),
-            "//locale:locale_" + arch + "_" + distro,
+            deb.package(arch, distro, "zlib1g"),
+            deb.package(arch, distro, "libjpeg62-turbo"),
+            deb.package(arch, distro, "libpng16-16"),
+            deb.package(arch, distro, "liblcms2-2"),
+            deb.package(arch, distro, "libfreetype6"),
+            deb.package(arch, distro, "fonts-dejavu-core"),
+            deb.package(arch, distro, "fontconfig-config"),
+            deb.package(arch, distro, "libexpat1"),
+            deb.package(arch, distro, "libfontconfig1"),
+            deb.package(arch, distro, "libuuid1"),
+            deb.package(arch, distro, "libbrotli1"),
+            deb.package(arch, distro, "libcrypt1"),
+            deb.package(arch, distro, "libstdcpp6"),
+            deb.package(arch, distro, "libgcc-s1"),
+            "//common:locale_" + distro + "_" + arch,
         ],
     )
     for mode in [
@@ -161,11 +161,11 @@ DISTRO_SPECIFIC_LIBRARIES = {
         base = "java_build_base" + mode + "_" + user + "_" + arch + "_" + distro,
         env = {"LANG": "C.UTF-8"},
         tars = [
-            deb_pkg(arch, distro, "libharfbuzz0b"),
-            deb_pkg(arch, distro, "libgraphite2-3"),
-            deb_pkg(arch, distro, "libglib2.0-0"),
+            deb.package(arch, distro, "libharfbuzz0b"),
+            deb.package(arch, distro, "libgraphite2-3"),
+            deb.package(arch, distro, "libglib2.0-0"),
             ":cacerts_java_" + arch + "_" + distro,
-        ] + [deb_pkg(arch, distro, library) for library in DISTRO_SPECIFIC_LIBRARIES[distro]],
+        ] + [deb.package(arch, distro, library) for library in DISTRO_SPECIFIC_LIBRARIES[distro]],
     )
     for mode in [
         "",
@@ -239,7 +239,7 @@ DISTRO_SPECIFIC_LIBRARIES = {
         },
         tars = [
             ":openjdk_jre_headless_" + java_version + "_" + arch + "_" + distro,
-            deb_pkg(
+            deb.package(
                 arch,
                 distro,
                 "openjdk-" + java_version + "-jdk-headless",
