--- a/.github/workflows/buildifier.yaml
+++ b/.github/workflows/buildifier.yaml
@@ -2,31 +2,28 @@ name: Buildifier
 
 on:
   pull_request:
-    branches: [ 'main' ]
+    branches: ["main"]
 
 permissions:
   contents: read
 
 jobs:
-
   autoformat:
     name: Auto-format and Check
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Go 1.15.x
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.15.x
-        id: go
+          go-version: "1.21"
 
       - name: Check out code
         uses: actions/checkout@v4
 
       - name: Install Dependencies
         run: |
-          cd $(mktemp -d)
-          GO111MODULE=on go get github.com/bazelbuild/buildtools/buildifier@3.2.0
+          go install github.com/bazelbuild/buildtools/buildifier@3.2.0
 
       - name: Run buildifier
         shell: bash
